--- a/WPF_VideoSort.csproj
+++ b/WPF_VideoSort.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="MetadataExtractor" Version="2.8.1" />
   </ItemGroup>
 
 </Project>
